team/output/BD_1580_740_780/159/2/1/op.txt
  File "/home/ubuntu/test-bigdata/adminmgr/media/code/A2/python/task/BD_780_740_1580.py", line 57
    print("\n\n")'''
                   ^
SyntaxError: invalid syntax
